--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,5 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 CordovaAppRequireJS/www/scripts/appBundle.*
+CordovaAppRequireJS/scripts/**/*.js
+CordovaAppRequireJS/scripts/**/*js.map
