added winjs appbar

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,4 @@ ModelManifest.xml
 CordovaAppRequireJS/www/scripts/appBundle.*
 CordovaAppRequireJS/scripts/**/*.js
 CordovaAppRequireJS/scripts/**/*js.map
+CordovaAppRequireJS/www/views/*.js*
