--- a/CordovaAppRequireJS/packages.config
+++ b/CordovaAppRequireJS/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="WinJS" version="4.3.0" />
-  <package id="winjs.TypeScript.DefinitelyTyped" version="0.1.9" targetFramework="mdd81" />
+  <package id="winjs.TypeScript.DefinitelyTyped" version="0.1.9" />
 </packages>
