--- a/CordovaAppRequireJS/scripts/tsconfig.json
+++ b/CordovaAppRequireJS/scripts/tsconfig.json
@@ -4,7 +4,7 @@
     "noImplicitAny": false,
     "noEmitOnError": true,
     "removeComments": false,
-    "sourceMap": true,
+    "sourceMap": false,
     "out": "www/scripts/appBundle.js",
     "target": "es5",
     "experimentalDecorators": true
